objects/Contact_Stage_Event__e/Contact_Stage_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event on Contact and Lead Object to be consumed by Workato</description>
    <label>Contact Stage Event</label>
    <pluralLabel>Contact Stage Events</pluralLabel>
</CustomObject>