objects/Contact_Stage_Event__e/fields/ContactStage__c.field-meta.xml
<CustomField>
    <fullName>ContactStage__c</fullName>
    <label>ContactStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>