objects/Contact_Stage_Event__e/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>