objects/Contact_Stage_Event__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>